[gd_scene load_steps=21 format=3 uid="uid://cvhkgwdji7m2u"]

[ext_resource type="Theme" path="res://louis/font_theme.tres" id="1_eu6t1"]
[ext_resource type="Script" path="res://louis/co2/co_2.gd" id="1_ltwmw"]
[ext_resource type="Texture2D" uid="uid://bh7c0hdky3lxv" path="res://louis/co2/co2_assets/jauge.png" id="2_3w1wi"]
[ext_resource type="Texture2D" uid="uid://ceeuqge4lx3wf" path="res://louis/co2/co2_assets/bas jauge.png" id="3_xeyhc"]
[ext_resource type="Texture2D" uid="uid://dxxtq76pwqgyi" path="res://louis/co2/co2_assets/graduations.png" id="4_djcn8"]
[ext_resource type="Texture2D" uid="uid://b01eajexr5nl0" path="res://louis/co2/co2_assets/jauge_remplissage.png" id="5_c3onu"]
[ext_resource type="Texture2D" uid="uid://bc5kr6agnfa54" path="res://louis/co2/co2_assets/cible 1.png" id="5_ies8n"]
[ext_resource type="Texture2D" uid="uid://cxjpqan5m54v8" path="res://louis/co2/co2_assets/cible 2.png" id="6_88bnx"]
[ext_resource type="Texture2D" uid="uid://cg6q4hjnj3t4d" path="res://louis/co2/co2_assets/cible 3.png" id="7_iwu24"]
[ext_resource type="Texture2D" uid="uid://udka23pfakdv" path="res://louis/co2/co2_assets/notice.png" id="8_0r804"]
[ext_resource type="Texture2D" uid="uid://d1xn4koecl6nu" path="res://louis/co2/co2_assets/etiquette.png" id="9_dosaa"]
[ext_resource type="Texture2D" uid="uid://b7d0pqtam5oau" path="res://louis/co2/co2_assets/CO2.png" id="10_ye01y"]
[ext_resource type="AudioStream" uid="uid://dn0s1fxlam62i" path="res://assets/audio/Bulles Temperature.mp3" id="12_gqpia"]
[ext_resource type="AudioStream" uid="uid://brnkurl44mu3m" path="res://assets/audio/Molecules crashing.wav" id="13_qcdrq"]
[ext_resource type="AudioStream" uid="uid://bo5kh4ydloly7" path="res://assets/audio/music/Winner.wav" id="15_udmvi"]
[ext_resource type="AudioStream" uid="uid://i7qieu1m75jk" path="res://assets/audio/OFF decharge.wav" id="16_lo35u"]
[ext_resource type="AudioStream" uid="uid://dcs8mnvcubsms" path="res://assets/audio/music/Mini jeu Carrotes Music.mp3" id="17_yjghf"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3jws8"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("13_qcdrq")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h7qax"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("15_udmvi")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_527aa"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("16_lo35u")
stream_0/weight = 1.0

[node name="CO2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltwmw")

[node name="InvisibleWalls" type="StaticBody2D" parent="."]
position = Vector2(231, 104)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InvisibleWalls"]
polygon = PackedVector2Array(-16, -30, -16, 410, 545, 410, 545, -42, -36, -42, -42, -84, 633, -83, 646, 481, -106, 477, -105, -35)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.243137, 0.266667, 0.32549, 1)

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
theme = ExtResource("1_eu6t1")
theme_override_font_sizes/font_size = 24
text = "Éliminez les molécules parasites"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tube" type="Sprite2D" parent="."]
position = Vector2(141, 270)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_3w1wi")

[node name="Base" type="Sprite2D" parent="Tube"]
position = Vector2(0, 364)
texture = ExtResource("3_xeyhc")

[node name="Node2D" type="Node2D" parent="Tube"]
position = Vector2(-32, -320)
scale = Vector2(0.95, 0.95)

[node name="Temperature" type="TextureProgressBar" parent="Tube/Node2D"]
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.151
anchor_right = 0.133
anchor_bottom = 0.683
offset_left = 2.10524
offset_top = 12.6316
offset_right = 69.1052
offset_bottom = 723.632
grow_vertical = 2
max_value = 32.0
value = 1.0
fill_mode = 3
texture_progress = ExtResource("5_c3onu")

[node name="Graduations" type="Sprite2D" parent="Tube"]
position = Vector2(-16, 0)
texture = ExtResource("4_djcn8")

[node name="Target1" type="Sprite2D" parent="Tube"]
position = Vector2(0, 188)
texture = ExtResource("5_ies8n")

[node name="Target2" type="Sprite2D" parent="Tube"]
position = Vector2(0, -34)
texture = ExtResource("6_88bnx")

[node name="Target3" type="Sprite2D" parent="Tube"]
position = Vector2(0, -192)
texture = ExtResource("7_iwu24")

[node name="Label1" type="Node2D" parent="Tube"]
position = Vector2(-222, 180)

[node name="Label" type="Label" parent="Tube/Label1"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1.0
grow_vertical = 2
theme = ExtResource("1_eu6t1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Palier 1"

[node name="Label2" type="Node2D" parent="Tube"]
position = Vector2(-226, -34)

[node name="Label" type="Label" parent="Tube/Label2"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1.0
grow_vertical = 2
theme = ExtResource("1_eu6t1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Palier 2"

[node name="Label3" type="Node2D" parent="Tube"]
position = Vector2(-230, -198)

[node name="Label" type="Label" parent="Tube/Label3"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1.0
grow_vertical = 2
theme = ExtResource("1_eu6t1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Palier 3"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -339.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("8_0r804")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/TextureRect/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_eu6t1")
theme_override_colors/font_color = Color(0.219608, 0.239216, 0.294118, 1)
text = "Chauffez la cuve en cliquant rapidement sur l'écran.

Maintenez la tempéraure à chaque pallier pour filtrer les molécules.

Videz les 3 types de molécules pour finir votre analyse."
autowrap_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("9_dosaa")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2/TextureRect/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("10_ye01y")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer2/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/TextureRect/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_eu6t1")
theme_override_colors/font_color = Color(0.219608, 0.239216, 0.294118, 1)
text = "Taux CO2:"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer2/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/TextureRect/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("1_eu6t1")
theme_override_colors/font_color = Color(0.219608, 0.239216, 0.294118, 1)
text = "423 ppm"
horizontal_alignment = 1

[node name="Molecules" type="Node2D" parent="."]

[node name="TimerDecrease" type="Timer" parent="."]
autostart = true

[node name="TimerInsideTarget" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayerAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_gqpia")
volume_db = -3.0
autoplay = true
bus = &"Sounds"

[node name="AudioStreamPlayerSuccess1" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_3jws8")
volume_db = -3.0
bus = &"Sounds"

[node name="AudioStreamPlayerSuccess2" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_h7qax")
volume_db = -6.0
bus = &"Sounds"

[node name="AudioStreamPlayerChargeUp" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_527aa")
volume_db = -12.0
bus = &"Sounds"

[node name="AudioStreamPlayerMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_yjghf")
volume_db = -3.0
autoplay = true
bus = &"Music"

[connection signal="value_changed" from="Tube/Node2D/Temperature" to="." method="_on_temperature_value_changed"]
[connection signal="timeout" from="TimerDecrease" to="." method="_on_timer_decrease_timeout"]
[connection signal="timeout" from="TimerInsideTarget" to="." method="_on_timer_inside_target_timeout"]
